# Todo-Rust

./: .env  Cargo.toml
migrations/2022-06-27-111159_todo_list/: up.sql
src/: lib.rs  main.rs  models.rs
src/db_conn/: conn.rs
src/models/: todo.rs
src/routes/: add_task.rs  delete_task.rs  done.rs  mod.rs  show_tasks.rs  undone.rs
